Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138641

QtWebEngine rendering glitches with <select> element

XMLWordPrintable

    • Linux/Wayland, Linux/X11
    • 092e42c0f (dev), 1f119b330 (6.10), 9dd510567 (6.9), 8f32bd294 (6.8)

      Opening and closing a <select> element in QWebEngineView causing rendering glitches.
      QWebEngineView is rendered upside down or the widget renders a black image.
      AFAIK it only happens with hardware rendering if the QWebEngineView is embedded into an other widget (like in the simplebrowser example).
      The view stays black until it is resized but it still recives input events.

      To reproduce: open the attached index.html with simplebrowser and start clicking the button.

      Startup log:

       

      qt.webenginecontext:
      Chromium GL Backend: angle
      Chromium ANGLE Backend: default
      Chromium Vulkan Backend: disabled
      QSG RHI Backend: OpenGL
      QSG RHI Backend Supported: yes
      QSG RHI Device: Intel Mesa Intel(R) Graphics (RPL-S) 4.6 (Compatibility Profile) Mesa 25.1.5-arch1.1
      QSG RHI GPU Vendor: Intel
      Using GLX: yes
      Using EGL: no
      Using GBM: yes
      Using Shared GL: no
      Init Parameters:
       *  application-name simplebrowser
       *  browser-subprocess-path /home/martin/work/dev/submodules/qtbase/libexec/QtWebEngineProcess
       *  disable-blink-features WebOTP
       *  disable-features EyeDropper,BackgroundFetch,InstalledApp,WebOTP,WebPayments,WebUSB,StandardCompliantNonSpecialSchemeURLParsing
       *  disable-setuid-sandbox
       *  disable-speech-api
       *  enable-features NetworkServiceInProcess2,TracingServiceInProcess
       *  in-process-gpu
       *  touch-events auto
       *  use-gl angle
      

      It also reproduce with EGL.
      I suspect the issue is present after https://codereview.qt-project.org/c/qt/qtwebengine/+/629764

        1. WebEngineSelectDialog.mp4
          138 kB
        2. index.html
          0.7 kB
        For Gerrit Dashboard: QTBUG-138641
        # Subject Branch Project Status CR V

            pvarga Peter Varga
            mnegyokru Martin Negyokru
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: