Delete OpenGL textures in the same context where they were created

Pick-to: 6.8 6.9 6.10
Fixes: QTBUG-138641
Change-Id: I97ee0964ea09080917f79f40adead61dd086442a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>